--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.15",
+        "laravel/socialite": "^5.8",
         "laravel/tinker": "^2.5",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-translatable": "^5.2"
     },
     "require-dev": {
